
package proto;

option java_package = "com.lvl6.aoc2.eventprotos";
option java_outer_classname = "RepairEquipEventProto";

//user can queue up repairs

message RepairEquipRequestProto {
	//optional user object = 1;
	optional int32 userEquipId = 2;
	optional bool inQueue = 3;
	optional int64 startTime = 4; //time goes into queue
}

message RepairEquipResponseProto {
	//optional user object = 1;
	optional RepairEquipStatus status = 2;
	
	
	enum RepairEquipStatus {
		SUCCESS = 0;
		FAIL_NOT_DAMAGED = 1;
		FAIL_NOT_ENOUGH_RESOURCES = 2;
		FAIL_UNSYNCHRONIZED_TIMES = 3;
		FAIL_MAXED_QUEUE_LIMIT = 4;
		FAIL_OTHER = 4;
	} 
}